fixed contact section alignment and added styles

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,14 +30,12 @@ body {
   padding-left: 5px;
 }
 
-.navigation ul,
-.contact ul {
+.navigation ul{
   display: flex;
   list-style-type: none;
 }
 
-.navigation ul a,
-.contact ul a {
+.navigation ul a{
   text-decoration: none;
   padding: 0 16px;
   margin: 0 5px;
@@ -52,7 +50,6 @@ body {
   margin: 0 auto;
   width: 760px;
   display: flex;
-  justify-content: space-between;
 }
 
 .section h1 {
@@ -87,14 +84,34 @@ body {
   padding: 0;
 }
 
+.intro-section .quote {
+    align-self: flex-end;
+}
+
+.intro-section .quote .author {
+    font-size: 20px;
+} 
+
 /* contact */
 
 .contact {
     align-items: center;
-    justify-content: space-between;
 }
 
-.contact ul a {
+.contact ul {
+    text-align: center;
+    margin-left: 0;
+}
+
+.contact ul li {
+    display: inline;
+}
+
+.contact ul li a {
   color: var(--main-green-color);
   text-shadow: none;
+  text-decoration: none;
+  margin: 0 10px;
+  padding-bottom: 2px;
+  border-bottom: 3px solid var(--main-green-color);
 }
